# reddit-acc-creator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
config/: gmail_credentials.json
docs/: Architecture.md
src/: adspower.py  authorize_gmail.py  browser.py  captcha.py  config.py  gmail.py  main.py  security.py
tests/: test_captcha.py  test_gmail.py
ui/: adspower_page.py  app.py  config.py  data_page.py  run_worker.py  watcher.py
